# artikla

./: .README.md.un~  Cargo.toml  README.md  Rocket.toml
migrations/: 20230911161359_create_articles.down.sql  20230911161359_create_articles.up.sql
src/: lib.rs  main.rs  mod.rs
src/lib/: date_fmt_swedish.rs  mod.rs  regexlib.rs
src/models/: article.rs  channels.rs  mod.rs  publication.rs  topic.rs  url.rs
src/routes/: index.rs  mod.rs
src/routes/articles/: articles.rs
src/templates/: articles.html.tera  articles_list.html.tera  base.html.tera  expand_article.html.tera
static/css/: body.css  colours.css  hero.css  nav.css  wrappers.css
static/js/: fetchArticle.js
