[package]
name = "artikla-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = [ "msgpack" ] }
rocket_dyn_templates = { version = "0.1.0-rc.3", features = [ "tera" ] }
serde = { version = "1.0", features = ["derive"] }
rmp = "^0.8"
reqwest = "0.11.20"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono" ] }
uuid = { version = "1.4.1", features = ["v4", "serde"]}
chrono = { version = "0.4", features = ["serde"]}
dotenvy = "0.15"
rss = "2.0"